--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,52 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@300;400;500;600;700&family=Open+Sans:wght@400;600;700;800&display=swap');
-
-
-.navbar {
-    -webkit-box-shadow: 3px 3px 3px rgb(62, 61, 59);
-    -moz-box-shadow:    3px 3px 3px rgb(46, 46, 45);
-    box-shadow:         3px 3px 3px rgb(48, 48, 47);
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 600;
+ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+ul li{
+    float: left;
+    width: 200px;
+    height: 40px;
+    background-color: #003542;
+    opacity: .9;
+    line-height: 40px;
+    text-align: center;
     font-size: 20px;
-    background-color: rgb(14, 14, 14);
-    height: 70px;
 }
 
-#collasible-nav-dropdown{
-    color: white;
-    text-decoration: none;
+ul li ul li {
+    display: none;
 }
-
-#collasible-nav-dropdown:hover{
-    color: rgb(233, 29, 29);
+ul li:hover ul li{
     display: block;
-}
-
-.categorias {
-    display: block;
-    width: 100%;
-    padding: .25rem 1rem;
-    clear: both;
-    font-weight: 400;
-    color: #212529;
-    text-align: inherit;
-    text-decoration: none;
-    white-space: nowrap;
-    background-color: transparent;
-    border: 0;
-}
-
-.categorias:hover{
-    color: grey!important;
-}
-
-.nav-link{
-    color: white !important; 
-    text-decoration: none;
-}
-
-.nav-link:hover{
-    color: rgb(233, 29, 29) !important;
 }
 
 .logo {
@@ -66,6 +38,3 @@
     font-size: 1rem;
 }
 
-a {
-    text-decoration: none  !important;
-}
